plus icon added for group accordion

--- a/client/src/group/Group.css
+++ b/client/src/group/Group.css
@@ -11,3 +11,11 @@
     transition: 0.4s;
     font-family: inherit;
 }
+
+.accordion::after {
+	content: '\002B';
+	color: #777;
+	font-weight: bold;
+	float: right;
+	margin-left: 5px;
+}
