--- a/client/src/group/Group.css
+++ b/client/src/group/Group.css
@@ -12,8 +12,7 @@
     font-family: inherit;
 }
 
-.accordion::after {
-	content: '\002B';
+.icon{
 	color: #777;
 	font-weight: bold;
 	float: right;
